--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
         "express-session": "^1.15.6",
         "http-proxy-middleware": "^0.17.4",
         "knox": "^0.9.2",
+        "material-ui": "^0.20.0",
         "multer": "^1.3.0",
         "nodemailer": "^4.6.4",
+        "radium": "^0.24.0",
         "react": "^16.2.0",
         "react-async-script-loader": "^0.3.0",
         "react-dom": "^16.2.0",
@@ -46,6 +48,7 @@
         "socket-cookie-session": "github:spicedacademy/socket-cookie-session",
         "socket.io": "^2.0.3",
         "spiced-pg": "spicedacademy/spiced-pg",
+        "styled-components": "^3.2.6",
         "uid-safe": "^2.1.4",
         "webpack": "^1.14.0",
         "webpack-dev-middleware": "^1.8.4"
