--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "node": "8.9.4"
     },
     "dependencies": {
+        "@shopify/polaris": "^1.14.1",
         "axios": "^0.15.3",
         "babel-cli": "^6.18.0",
         "babel-core": "^6.20.0",
