--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "nodemailer": "^4.6.4",
         "radium": "^0.24.0",
         "react": "^16.2.0",
+        "react-addons-css-transition-group": "^15.6.2",
         "react-async-script-loader": "^0.3.0",
         "react-dom": "^16.2.0",
         "react-redux": "^5.0.5",
