--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "scripts": {
         "build": "node build.js",
         "start": "node index.js",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "npm run scss-compile",
+        "scss-compile": "node-sass -rw public/scss -o public/scss",
+        "watch": "npm run scss-compile"
     },
     "engines": {
         "node": "8.9.4"
@@ -35,6 +37,7 @@
         "knox": "^0.9.2",
         "material-ui": "^0.20.0",
         "multer": "^1.3.0",
+        "node-sass": "^4.9.0",
         "nodemailer": "^4.6.4",
         "radium": "^0.24.0",
         "react": "^16.2.0",
@@ -47,6 +50,12 @@
         "redux": "^3.7.1",
         "redux-devtools-extension": "^2.13.2",
         "redux-promise": "^0.5.3",
+        "sass": "^1.3.0",
+        "scripts": {
+            "scss-compile": "node-sass -rw public/scss -o public/scss",
+            "test": "npm run scss-compile",
+            "watch": "npm run scss-compile"
+        },
         "socket-cookie-session": "github:spicedacademy/socket-cookie-session",
         "socket.io": "^2.0.3",
         "spiced-pg": "spicedacademy/spiced-pg",
