--- a/package.json
+++ b/package.json
@@ -5,11 +5,8 @@
     "main": "index.js",
     "scripts": {
         "build": "node build.js",
-        "libphonenumber-metadata": "libphonenumber-generate-metadata metadata.min.json --countries RU,DE --extended",
         "start": "node index.js",
-        "test": "npm run scss-compile",
-        "scss-compile": "node-sass -rw public/scss -o public/scss",
-        "watch": "npm run scss-compile"
+        "test": "echo \"Error: no test specified\" && exit 1"
     },
     "engines": {
         "node": "8.9.4"
@@ -33,50 +30,33 @@
         "cookie-session": "^2.0.0-alpha.2",
         "csurf": "^1.9.0",
         "express": "^4.14.0",
-        "express-session": "^1.15.6",
         "http-proxy-middleware": "^0.17.4",
         "knox": "^0.9.2",
-        "libphonenumber-js": "^1.1.11",
-        "material-ui": "^0.20.0",
         "multer": "^1.3.0",
         "mysql": "^2.15.0",
-        "node-sass": "^4.9.0",
         "nodemailer": "^4.6.4",
-        "radium": "^0.24.0",
         "react": "^16.2.0",
         "react-addons-css-transition-group": "^15.6.2",
-        "react-async-script-loader": "^0.3.0",
-        "react-bootstrap-intl-tel-input": "^1.0.1",
         "react-dom": "^16.2.0",
-        "react-intl-tel-input": "^5.0.4",
-        "react-phone-input": "^1.2.1",
-        "react-phone-input-2": "^2.2.1",
-        "react-phone-number-input": "^1.0.11",
+        "react-mailchimp-subscribe": "^2.0.1",
         "react-redux": "^5.0.5",
         "react-router": "^4.2.0",
         "react-router-dom": "^4.2.2",
-        "react-telephone-input": "^4.5.9",
         "redux": "^3.7.1",
         "redux-devtools-extension": "^2.13.2",
         "redux-promise": "^0.5.3",
-        "sass": "^1.3.0",
-        "scripts": {
-            "scss-compile": "node-sass -rw public/scss -o public/scss",
-            "test": "npm run scss-compile",
-            "watch": "npm run scss-compile"
-        },
         "socket-cookie-session": "github:spicedacademy/socket-cookie-session",
         "socket.io": "^2.0.3",
         "spiced-pg": "spicedacademy/spiced-pg",
         "styled-components": "^3.2.6",
         "uid-safe": "^2.1.4",
-        "webpack": "^2.3.0",
+        "webpack": "^1.14.0",
         "webpack-dev-middleware": "^1.8.4"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "devDependencies": {
-        "postcss-loader": "^2.1.5"
+        "compression-webpack-plugin": "^1.1.11"
     }
 }
