--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
         "multer": "^1.3.0",
         "mysql": "^2.15.0",
         "nodemailer": "^4.6.4",
-        "react": "^16.2.0",
+        "react": "^16.4.0",
         "react-addons-css-transition-group": "^15.6.2",
         "react-dom": "^16.2.0",
         "react-mailchimp-subscribe": "^2.0.1",
@@ -45,6 +45,7 @@
         "redux": "^3.7.1",
         "redux-devtools-extension": "^2.13.2",
         "redux-promise": "^0.5.3",
+        "shopify-buy": "^1.4.0",
         "socket-cookie-session": "github:spicedacademy/socket-cookie-session",
         "socket.io": "^2.0.3",
         "spiced-pg": "spicedacademy/spiced-pg",
