--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "nodemailer": "^4.6.4",
         "react": "^16.4.0",
         "react-addons-css-transition-group": "^15.6.2",
+        "react-cookie-banner": "^4.0.0",
         "react-dom": "^16.2.0",
         "react-mailchimp-subscribe": "^2.0.1",
         "react-redux": "^5.0.5",
