redux observables added

--- a/package.json
+++ b/package.json
@@ -45,8 +45,11 @@
         "react-router": "^4.3.1",
         "react-router-dom": "^4.2.2",
         "redux": "^3.7.1",
+        "redux-actions": "^2.6.4",
         "redux-devtools-extension": "^2.13.2",
+        "redux-observable": "^0.16.0",
         "redux-promise": "^0.5.3",
+        "rxjs": "^5.4.3",
         "shopify-buy": "^1.4.0",
         "socket-cookie-session": "github:spicedacademy/socket-cookie-session",
         "socket.io": "^2.0.3",
