--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "spiced-social-network",
+    "name": "parka-website",
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
@@ -33,6 +33,7 @@
         "express": "^4.14.0",
         "http-proxy-middleware": "^0.17.4",
         "knox": "^0.9.2",
+        "lodash": "^4.17.11",
         "multer": "^1.3.0",
         "mysql": "^2.15.0",
         "nodemailer": "^4.6.4",
